# rustout

./: Cargo.toml  README.md  notes.org
src/: block.rs  consts.rs  game.rs  game_loop.rs  main.rs  models.rs  paddle.rs  utils.rs
src/models/: ball.rs  block.rs  colors.rs  game.rs  mod.rs  paddle.rs  rectangle.rs
