[package]
name = "rustout"
version = "0.1.0"
authors = ["Grant Horner <h.grant.horner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.1"
quickcheck = "0.9"
quickcheck_macros = "0.9"
rand = ""
